--- a/pipline.yml
+++ b/pipline.yml
@@ -11,7 +11,7 @@ steps:
    - task: CmdLine@2
      inputs:
         script: |
-          sudo apt update
+         # sudo apt update
           sudo apt install maven
           mvn -version
           mvn package
